...

    <string name="unknown_app_version">Unknown Version</string>
    <string name="ok">OK</string>
    <string name="all_devices">All Devices</string>
    <string name="log_out">Log Out</string>
...
    <string name="off">Turn Off</string>
    <string name="device_state_unknown">UNKNOWN</string>
    <string name="smart_plug">Smart Plug</string>
    <string name="notifications">Notifications</string>
    <string name="schedule">Schedule</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
...
    <string name="sign_up_success">Sign up successful. Check for a confirmation email to activate your account.</string>
    <string name="sign_up_error">There was an error during sign-up</string>
    <string name="add_device_menu">Add Device</string>

    <string name="attention">Attention</string>
...
    <string name="network_not_reachable">Network is unreachable</string>
    <string name="wlan_signin">Successful WLAN sign-in</string>
    <string name="dashboard">Dashboard</string>
    <string name="groups">Groups</string>
    <string name="scenes">Scenes</string>
    <string name="gateways">Gateways</string>
    <string name="account">Account</string>
    <string name="add_device_or_group_title">Add Device or Group</string>
    <string name="add_group_title">Add a Group or Room</string>
    <string name="add_group_message">Input the name for your new group or room</string>
    <string name="group_name_hint">Unique Group or Room Name</string>
    <string name="add_group">Add Group</string>
    <string name="choose_group_devices">Select which devices you wish to have in this group</string>
    <string name="resend_confirmation_message">Please enter the email address associated with your account. If your account is valid, a new confirmation will be sent to you.</string>
    <string name="send">Send</string>
    <string name="email_confirmation_sent">A confirmation email was sent to your account. Please check your email and click on the link provided to authenticate your account.</string>
    <string name="delete_group">Delete this group</string>
    <string name="invalid_group_name">The group name you have chosen is reserved. Please choose another name for your group.</string>
    <string name="confirm_delete_group_body" formatted="false">Do you wish to remove the group \"%s\"?</string>
...
    <!-- Array of registration types -->
    <string-array name="registration_types">
        <item>Same-LAN</item>
        <item>Button-Push</item>
        <item>Display</item>
...
    <string name="configure_a_timer_or_a_schedule_before_saving">Configure a timer or a schedule before saving.</string>
    <string name="configure_schedule_times">Update Turn on and Turn off time for this schedule.</string>
    <string name="timezone_button_text">Timezone...</string>
    <string name="sharing_button_text">Share Device...</string>
    <string name="choose_timezone">Select the time zone for this device</string>
    <string name="fetching_timezone_title">Fetching device timezone...</string>
...
    <string name="fill_from_contact">Import from Address Book</string>
    <string name="choose_ap_details" formatted="false">Enter the password for the \"%s\" access point</string>
    <string name="shares">Shares</string>
    <string name="devices_i_share">Devices I am sharing with others</string>
    <string name="devices_shared_with_me">Devices shared with me</string>
...
    <string name="change_name_fail">An error occurred while trying to change the name of your device. Please try again later.</string>
    <string name="registration">Registration</string>
    <string name="contact_list">Contact List</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="signing_out">Signing Out...</string>
    <string name="confirm_sign_out">Sign Out?</string>
...
    <string name="no_devices_in_group">Tap the add button to add devices to this group</string>
    <string name="about_app" formatted="true">About %s</string>
    <string name="about">About</string>
    <string name="more_options">More...</string>
    <string name="service_location">Service Location</string>
...
    <string name="cellular_enabled">Cellular</string>
    <string name="offline_no_functionality">Device is offline and cannot be modified</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="fetching_devices">Fetching devices from the cloud. Please wait...</string>
...
    <string name="fetching_account_info_title">Fetching account information</string>
    <string name="fetching_account_info_body">Fetching account information from the server. Please wait...</string>
    <string name="details">Details...</string>
    <string name="device_detail_header_text" formatted="false">%s Details</string>
    <string name="blue_button">Blue Button</string>
...
    <string name="remote_action_fix_failure">Fix Remote Failed</string>

    <string name="help">Help</string>
    <string name="about_amap">About AMAP</string>
    <string name="get_started">Getting Started</string>
...
    <string name="setup_guide">Setup Gateway</string>
    <string name="gateway_ready">Gateway Ready?</string>
    <string name="gateway_ready_2">The gateway is ready</string>
    <string name="setup_guide_header">Setup Guide</string>
    <string name="setup_guide_text_1">Plug your gateway into a power outlet using the included AC adapter.\n\nConnect one end of the included network cable to the gateway\'s Ethernet port and the other end to a LAN port on your WiFi Router.</string>
...
