<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:id="@+id/background"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/funbg"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical">

        <ImageView
            android:id="@+id/imageViewConnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"/>

        <Spinner
            android:id="@+id/service_type_spinner"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"
            android:padding="4dp"
            android:layout_margin="4dp"

            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/top_layout"
            android:orientation="vertical"
            android:layout_below="@+id/imageViewConnected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:text="@string/emailAddress"
            />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:ems="10"
            android:background="@drawable/signin_edit_bg"
            android:padding="4dp"
            android:hint="@string/emailAddress"
            android:inputType="textEmailAddress">

            <requestFocus/>
        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:text="@string/password"
                />
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/signin_edit_bg"
            android:padding="4dp"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/signIn"
            android:textSize="18sp"
            android:background="@drawable/signin_button_bg"

            style="@style/AgileLinkButton"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_below="@id/top_layout"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/google_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:src="@drawable/google_icon"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"/>

            <ImageButton
                android:id="@+id/facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:src="@drawable/facebook_icon"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/bottom_button_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/sign_in_bottom_bg"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/up"
                android:background="@android:color/transparent"
                android:gravity="center|center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center|center_vertical"
                android:text="@string/forgot"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:id="@+id/resendConfirmationTextView"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:text="@string/resend_confirmation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>