...
            android:layout_gravity="left|center_vertical"
            android:layout_weight="0.4"
            android:text="@string/product_type"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:id="@+id/spinner_product_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="0.6"
            android:gravity="center_vertical"/>

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/spinner_registration_type"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"/>
    </LinearLayout>

...
