<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/group_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/add_group_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <EditText
        android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_margin="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/group_name_hint"
        />

</LinearLayout>